docs: api 문서 수정
