# src/swagger/swagger-output.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "TEST API Docs",
-    "description": "시니나눔",
+    "title": "시니나눔",
+    "description": "시니나눔 API 문서",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -279,49 +279,14 @@
         "tags": [
           "Career"
         ],
-        "summary": "경력 프로필 등록",
-        "description": "경력 프로필 등록하기",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "introduce": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "field": {
-                  "example": "any"
-                },
-                "service": {
-                  "example": "any"
-                },
-                "method": {
-                  "example": "any"
-                },
-                "region": {
-                  "example": "any"
-                },
-                "priceType": {
-                  "example": "any"
-                },
-                "price": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
+        "summary": "경력 프로필 생성",
+        "description": "경력 프로필 생성하기",
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "201": {
             "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -333,18 +298,73 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/career/list": {
-      "get": {
+      },
+      "patch": {
         "tags": [
           "Career"
         ],
-        "summary": "경력 프로필 조회",
-        "description": "경력 프로필 조회하기",
+        "summary": "경력 프로필 수정",
+        "description": "경력 프로필 수정하기",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "example": {
+                  "type": "object",
+                  "properties": {
+                    "profileId": {
+                      "type": "number",
+                      "example": 111111
+                    },
+                    "introduce": {
+                      "type": "string",
+                      "example": "소개"
+                    },
+                    "age": {
+                      "type": "string",
+                      "example": "60대"
+                    },
+                    "field": {
+                      "type": "string",
+                      "example": "경제"
+                    },
+                    "service": {
+                      "type": "string",
+                      "example": "제공할 서비스"
+                    },
+                    "method": {
+                      "type": "string",
+                      "example": "대면"
+                    },
+                    "region": {
+                      "type": "string",
+                      "example": "종로구"
+                    },
+                    "priceType": {
+                      "type": "string",
+                      "example": "시간당"
+                    },
+                    "price": {
+                      "type": "number",
+                      "example": 1000
+                    },
+                    "progressStep": {
+                      "type": "number",
+                      "example": 8
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
@@ -399,6 +419,47 @@
         ],
         "summary": "경력 상세 사항 등록",
         "description": "경력 프로필에 등록하는 경력 상세 사항",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "example": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string",
+                      "example": "제목"
+                    },
+                    "startYear": {
+                      "type": "number",
+                      "example": 1989
+                    },
+                    "startMonth": {
+                      "type": "number",
+                      "example": 12
+                    },
+                    "endYear": {
+                      "type": "number",
+                      "example": 2023
+                    },
+                    "endMonth": {
+                      "type": "number",
+                      "example": 12
+                    },
+                    "content": {
+                      "type": "string",
+                      "example": "내용을 입력합니다."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -415,55 +476,6 @@
           "500": {
             "description": "Internal Server Error"
           }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "type": "string",
-                    "description": "경력 제목"
-                  },
-                  "startYear": {
-                    "type": "integer",
-                    "description": "경력 시작 연도"
-                  },
-                  "startMonth": {
-                    "type": "integer",
-                    "description": "경력 시작 월"
-                  },
-                  "endYear": {
-                    "type": "integer",
-                    "description": "경력 종료 연도"
-                  },
-                  "endMonth": {
-                    "type": "integer",
-                    "description": "경력 종료 월"
-                  },
-                  "period": {
-                    "type": "string",
-                    "description": "경력 기간 (선택 사항)",
-                    "nullable": true
-                  },
-                  "content": {
-                    "type": "string",
-                    "description": "경력 상세 내용"
-                  }
-                },
-                "required": [
-                  "title",
-                  "startYear",
-                  "startMonth",
-                  "endYear",
-                  "endMonth",
-                  "content"
-                ]
-              }
-            }
-          }
         }
       },
       "delete": {
@@ -472,6 +484,20 @@
         ],
         "summary": "경력 상세 사항 삭제",
         "description": "경력 프로필에 등록하는 경력 상세 사항",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "careerId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -487,25 +513,6 @@
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "careerId": {
-                    "type": "integer",
-                    "description": "경력 항목 아이디"
-                  }
-                },
-                "required": [
-                  "careerId"
-                ]
-              }
-            }
           }
         }
       }
